jerry-core/parser/js/new-parser/tests/js/lexer/number-after-expression.js
/* This test contains number literal parser tests. */
 23.5e+5	x
